--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="styles.less">
 
     <!-- VENDOR SCRIPTS -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
 
     <!-- APPLICATION SCRIPTS -->
     <script src="scripts.js"></script>
@@ -28,45 +30,20 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Brand</a>
+    <a class="navbar-brand" href="#"><img id="logo" src="img/General-Assembly-logo.png" height="60"></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-          <li class="divider"></li>
-          <li><a href="#">One more separated link</a></li>
-        </ul>
-      </li>
+    <ul class="nav navbar-nav nn">
+      <li><a href="#">Web Development</a></li>
+      <li><a href="#">Data Science</a></li>
+      <li><a href="#">Digital Marketing</a></li>
+      <li><a href="#">UX Design</a></li>
+      <li><a href="#">Visual Design</a></li>      
     </ul>
-    <form class="navbar-form navbar-left" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Link</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </li>
+      <li><a href="#">Login</a></li>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
@@ -76,6 +53,24 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h1>Welcome to GA Junior!</h1>
+          <h3>Let's start learning.</h3>
+          <hr>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-2">
+              <ul class="fp nav">
+      <li><a href="#">Front-end Web Development</a></li>
+      <li><a href="#">Back-end Web Development</a></li>
+      <li><a href="#">Data Science</a></li>      
+    </ul>
+        </div>
+              <div class="col-md-4">
+              <ul class="fp nav">
+      <li><a href="#">Digital Marketing</a></li>
+      <li><a href="#">UX Design</a></li>
+      <li><a href="#">Visual Design</a></li>      
+    </ul>
         </div>
       </div>
     </div>
