--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li><a href="#">Visual Design</a></li>      
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Login</a></li>
+      <li><a href="#" id="loginlogout"></a></li>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
